src/assets/scss/pages/home.scss
.home{
  background-color: $default-black;
  color: $default-white;
    &__title{
      font-size: 3.5rem;
      font-weight: 600;
      margin: 7vh 0 .7rem;
      overflow: hidden;
      text-overflow: ellipsis;
      height: 228px;
      text-align: left;
      display: -webkit-box;
      -webkit-line-clamp: 4;
      -webkit-box-orient: vertical;
      max-width: 485px;
      @media only screen and (min-device-width : 320px) and (max-device-width : 1024px) {
        font-size: 2.5rem;
        height: 162px;
        margin: -1rem 0 0 0;
      }
        &__skeleton{
          height: 35px;
          margin-bottom: 30px;
          &.first{
            margin-top: 7rem;
          }
        }
    }

  &__content{
    display: grid;
    grid-template-columns: 33% 67%;
    grid-template-areas:
            'title banner'
            'button banner'
            'thumbs banner';
    padding-top: 17px;
    padding-bottom: 49px;
    @media only screen and (min-device-width : 320px) and (max-device-width : 1024px) {
      grid-template-columns: 100%;
      grid-template-areas:
            'title'
            'button'
            'banner'
            'thumbs';
      padding-bottom: 35px;
    }

    &__grid-title{
      grid-area: title;
    }

    &__grid-button{
      grid-area: button;
    }

    &__grid-thumbs{
      grid-area: thumbs;
    }

    &__grid-banner{
      grid-area: banner;
      @media only screen and (min-device-width : 320px) and (max-device-width : 1024px) {
        margin: 15px 0;
      }
    }

    &__grid-title, &__grid-thumbs{
      padding-right: 4rem;
      @media only screen and (min-device-width : 320px) and (max-device-width : 1024px) {
        padding-right: 0;
      }
    }

      &__thumbs{
        display: flex;
        margin: auto 0;
          &__thumb{
            width: 25%;
            height: 6.5vh;
            margin-right: 15px;
            cursor: pointer;
            border: 3px solid transparent;
            @media only screen and (min-device-width : 320px) and (max-device-width : 768px) {
              margin: 0 2px;
              height: 40px;
            }
              img{
                width: 100%;
                height: 100%;
                border-radius: 2px;
              }
            &.active{
              border: 3px solid $default-white;
              border-radius: 2px;
              img{
                border-radius: 0;
              }
            }
          }

      }
    &__btn-more{
      border-radius: 50px;
      font-weight: 600;
      font-size: 15px;
      margin-top: 28px;
    }
  }
}

